--- a/source/stylesheets/config/_colors.scss
+++ b/source/stylesheets/config/_colors.scss
@@ -1,11 +1,19 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #EE5F5B;
-$blue: #469AE0;
-$yellow: #FDB631;
-$orange: #E67E22;
-$green: #32B796;
+// $red: #EE5F5B;
+// $blue: #469AE0;
+// $yellow: #FDB631;
+// $orange: #E67E22;
+// $green: #32B796;
+// $gray: #000000;
+// $light-gray: #F4F4F4;
+
+$red: #f8ab99;
+$blue: #34c3b9;
+$yellow: #f0c310;
+$orange: #f49c43;
+$green: #c2d54a;
 $gray: #000000;
 $light-gray: #F4F4F4;
-
+$white: #ffffff;
