--- a/source/stylesheets/components/_cards.scss
+++ b/source/stylesheets/components/_cards.scss
@@ -3,14 +3,14 @@
   font-family: $headers-font;
 }
 .home-content{
-  background-color: #ffffff;
+  background-color: $white;
 }
 .card {
   height: 175px;
   text-shadow: 0 1px 3px rgba(0,0,0,0.6);
   background-size: cover !important;
   background-position: center;
-  color: white;
+  color: $white;
   position: relative;
   margin-bottom: 70px;
 }
@@ -48,7 +48,7 @@
   right: 0;
   width: 100%;
   z-index: 2;
-  background: black;
+  background: $gray;
   opacity: 0;
 }
 .card-link:hover {
