--- a/source/stylesheets/pages/_team.scss
+++ b/source/stylesheets/pages/_team.scss
@@ -5,7 +5,7 @@
   align-items: center;
   justify-content: space-around;
   text-align: center;
-  background-image: linear-gradient(0deg, white 50%, #F4F4F4 50%);
+  background-image: linear-gradient(0deg, white 50%, $light-gray 50%);
 
   img {
     width: 150px;
@@ -31,7 +31,7 @@
     font-size: 15px;
   }
   .fa-heart {
-    color: #D23333 ;
+    color: $red ;
   }
 }
 
